# OpenClaw-Scan

./: .env.example  .gitignore  AGENT_DOCS.md  AGENT_INTEGRATION_GUIDE.md  COMPETITION_SUBMISSION.md  DEMO_SCRIPT.md  DEPLOY.sh  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  EVAN_LAUNCH_READY.md  EVAN_START_HERE.md  EVAN_START_HERE_PRODUCTION.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_CHECKLIST.md  MOLTBOOK_LAUNCH_ANNOUNCEMENT.md  PRODUCTION_READY_SUMMARY.md  PROGRESS.md  README.md  README_PRODUCTION.md  REAL_LAUNCH_PLAN.md  RECORDING_GUIDE.md  SUBAGENT_REPORT.md  X402_LAUNCH_STATUS.md  X402_MONETIZATION_DESIGN.md  demo-rehearsal.sh  fly.toml  issue_false_positives.md  pyproject.toml  railway.json  railway.toml  requirements.txt  scanner
api/: .env.example  .env.local  .env.production  README.md  TESTNET_TESTING.md  attestation_signer.py  quick_test.sh  requirements.txt  scanner_integration.py  server.py  server.py.bak  test_x402_flow.sh  x402_verifier.py
clawdhub_scanner/: __init__.py  __main__.py  api.py  cli.py  config.py  manifest_parser.py  yara_scanner.py
clawdhub_scanner/yara_rules/: credential_theft.yar  malicious_code.yar  prompt_injection.yar  safe_patterns.yar
tests/: test_api.py  test_manifest_parser.py  test_yara_scanner.py
tests/fixtures/malicious-skill/: index.js  skill.json  skill.md  weather.js
tests/fixtures/safe-skill/: index.js  skill.json  skill.md
