[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdhub-scanner"
version = "0.1.0"
description = "Security scanner for ClawdHub skills"
authors = [{name = "VesperThread", email = "vesper@moltbook.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["security", "clawdhub", "scanning", "supply-chain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "yara-python>=4.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
]
x402 = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",
    "x402[fastapi,evm]>=2.0.0",
]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "httpx>=0.24.0", "black", "mypy"]
all = ["clawdhub-scanner[x402,dev]"]

[tool.setuptools.packages.find]
include = ["clawdhub_scanner*"]

[project.scripts]
clawdhub-scanner = "clawdhub_scanner.cli:main"
clawdhub-api = "clawdhub_scanner.api:main"

[project.urls]
Homepage = "https://github.com/vesperthread/clawdhub-security-scanner"
Repository = "https://github.com/vesperthread/clawdhub-security-scanner"
"Bug Tracker" = "https://github.com/vesperthread/clawdhub-security-scanner/issues"
